gitops/infra/envs/dev/streamforge.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    alb.networking.azure.io/alb-name: alb-infra
    alb.networking.azure.io/alb-namespace: azure-alb-system
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: streamforge-infra
  name: streamforge-gateway
  namespace: streamforge-dev
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: '*.sudheer.fun'
    name: https-listener
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: streamforge-tls-secret
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: '*.sudheer.fun'
    name: http-listener
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-https-httproute
  namespace: streamforge-dev
spec:
  hostnames:
  - streamforge.sudheer.fun
  parentRefs:
  - name: streamforge-gateway
    sectionName: https-listener
  rules:
  - backendRefs:
    - name: sf-frontend-svc
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: streamforge-infra
  name: httproute-redirect-http-to-https
  namespace: streamforge-dev
spec:
  hostnames:
  - streamforge.sudheer.fun
  parentRefs:
  - name: streamforge-gateway
    sectionName: http-listener
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
